# cdda-tools

./: .gitignore  LICENSE  MANIFEST.in  README.md  pylintrc  pyproject.toml  setup.cfg
.github/workflows/: cli_tests.yml  lints.yml  tests.yml
src/cdda-tools/: __init__.py
src/cdda-tools/json/: __init__.py
src/cdda_tools/: __init__.py  __main__.py  cli.py  game.py
src/cdda_tools/commands/: __init__.py  command.py  copy_player.py  copy_vehicle.py  filter_notes.py  find.py  inspect_player.py  list.py  note.py  notes.py  read_data.py  show_data.py  table.py  util.py  vehicle_mod.py
src/cdda_tools/json/: __init__.py
src/cdda_tools/json_utils/: __init__.py
tests/cli/: test_copy_player.py  test_copy_vehicle.py  test_find.py  test_help.py  test_list.py  test_note.py  test_notes.py  test_player.py  test_vehicle_mod.py
tests/game/: test_game.py
tests/json/: test_json.py
tests/regex/: test_regex_notes.py
tests/test_data/data/json/: materials.json  skills.json
tests/test_data/data/json/recipes/: recipe_food.json
