[metadata]
name = cdda_tools
description = Cataclysm-DDA Python tools.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mlange-42/cdda-tools
author = mlange-42
author_email = martin_lange_@gmx.net
maintainer = mlange-42
maintainer_email = martin_lange_@gmx.net
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
project_urls =
    Documentation = https://github.com/mlange-42/cdda-tools
    Source = https://github.com/mlange-42/cdda-tools
    Tracker = https://github.com/mlange-42/cdda-tools/issues
    Changelog = https://github.com/mlange-42/cdda-tools

[options]
package_dir =
    = src
packages = find:
install_requires =
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
doc =
    sphinx>=4
test =
    pytest-cov>=3
